[package]
name = "pdao-colony-common"
version = "0.1.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
license = "MIT"
description = "PDAO library for colony chain development"
repository = "https://github.com/postech-dao/beacon-chain"
keywords = ["blockchain", "PDAO"]
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
blake3 = "1.3.1"
tokio = { version = "1.0", features = ["full"] }
rust_decimal = "1.25.0"
thiserror = "1.0"
pdao-colony-contract-common = { version = "0.1.1", path = "../contract-common"}
pdao-beacon-chain-common = { version = "0.0.1", path = "../common"}
serde-tc = "0.3.2"
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
