[package]
name = "pdao-beacon-chain-common"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
license = "MIT"
description = "PDAO library for colony chain contract development"
repository = "https://github.com/postech-dao/beacon-chain"
keywords = ["blockchain", "PDAO"]
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "0.9.3", optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.0.0", features = ["derive"], optional = true }

[features]
polkadot = ["scale", "scale-info"]
near = ["borsh"]
