[package]
name = "pdao-pbc-relayer"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
tokio = { version = "1.0", features = ["full"] }
pdao-colony-common = { version = "0.1.0", path = "../colony-common"}
pdao-pbc-node = { version = "0.0.0", path = "../node"}
